--- a/src/main/resources/templates/components/nav_panel.html
+++ b/src/main/resources/templates/components/nav_panel.html
@@ -32,7 +32,7 @@
 
             <!-- Enlaces a funciones de usuario -->
             <a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}" title="Carrito">
-                🛒
+                Carrito
             </a>
             
             <!-- Mostrar configuración y cerrar sesión solo si hay sesión activa -->
