--- a/src/main/resources/templates/components/form_datos.html
+++ b/src/main/resources/templates/components/form_datos.html
@@ -1,7 +1,5 @@
-<!--Componente que sirve como modal, sera un registro de los datos que faltan del cliente-->
-
+<!-- Componente para el registro de dirección -->
 <section class="form-datos-modal">
-    
     <div class="form-group">
         <label for="distrito" class="form-label">Distrito:</label>
         <select id="distrito" name="distrito" class="form-select" required>
@@ -23,5 +21,70 @@
         <label for="referencia" class="form-label">Referencia:</label>
         <input type="text" id="referencia" name="referencia" class="form-input" required>
     </div>
-
 </section>
+
+<style>
+    
+.form-datos-modal {
+    width: 100%;
+    max-width: 620px;
+    
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: flex;
+}
+
+/* Contenedor de cada grupo de formulario */
+.form-group {
+    margin-bottom: 20px;
+    padding: 5px;
+}
+
+/* Estilos para las etiquetas de los campos */
+.form-label {
+    display: flex;
+    font-size: 16px;
+    color: #333;
+    margin-bottom: 8px;
+    font-weight: 600;
+}
+
+/* Estilos para los campos de selección (select) */
+.form-select {
+    width: 180px; /* Ancho del select */
+    padding: 10px; /* Espaciado interno */
+    font-size: 14px; /* Tamaño de fuente */
+    border: 1px solid #ccc; /* Borde */
+    border-radius: 4px; /* Bordes redondeados */
+    background-color: #f9f9f9; /* Color de fondo */
+    color: #333; /* Color del texto */
+    transition: border-color 0.3s ease; /* Transición de color de borde */
+}
+
+.form-select:focus {
+    border-color: #007bff; /* Color del borde al enfocar */
+    outline: none; /* Sin contorno */
+}
+
+/* Estilos para los campos de entrada de texto (input) */
+.form-input {
+    width: 180px;
+    padding: 12px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    color: #333;
+    transition: border-color 0.3s ease;
+}
+
+.form-input:focus {
+    border-color: #007bff;
+    outline: none;
+}
+
+</style>
