--- a/src/main/resources/templates/formEmpleadosEditar.html
+++ b/src/main/resources/templates/formEmpleadosEditar.html
@@ -12,8 +12,10 @@
         <input type="hidden" th:field="*{idEmpleado}"/>
         <label>Nombre:</label>
         <input type="text" th:field="*{nombre}" required/>
-        <label>Apellido:</label>
-        <input type="text" th:field="*{apellido}" required/>
+        <label>Apellido Paterno:</label>
+        <input type="text" th:field="*{apellidoPaterno}" required/>
+        <label>Apellido Materno:</label>
+        <input type="text" th:field="*{apellidoMaterno}" required/>
         <label>Usuario:</label>
         <input type="text" th:field="*{usuario}" required/>
         <label>Contraseña:</label>
