--- a/src/main/resources/templates/components/info_pedido.html
+++ b/src/main/resources/templates/components/info_pedido.html
@@ -17,7 +17,7 @@
                 <p class="card-text pedido-monto-final" th:text="${pedido.montoFinal}">Monto Final</p>
 
                 <!-- Botón para ver la factura, pasando el ID del pedido -->
-                <button class="btn btn-primary" data-id="${pedido.idPedido}" onclick="verFactura(this)">Ver Factura</button>
+                <button class="btn btn-primary" data-id="${pedido.idPedido}" onclick="verFactura(this)">Ver Recibo</button>
             </div>
         </div>
     </div>
