--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -88,6 +88,8 @@
             <button onclick="cerrarModal()">Cerrar</button>
         </div>
     </div>
+
+    <div th:include="components/footer"></div>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
