--- a/src/main/resources/templates/carta.html
+++ b/src/main/resources/templates/carta.html
@@ -9,31 +9,11 @@
 </head>
 <body>
     <header th:include="components/nav_panel"></header>
-    
-    <div th:include="components/mensajes"></div>
 
-    <main class="main">
-        <div class="categorias">
-            <div class="bebidas">
-                <img src="./img/bebidas.jpg" alt="">
-                <div class="categoria-info">
-                    <h3>Bebidas</h3>
-                </div>
-            </div>
-            <div class="postres">
-                <img src="./img/postres.jpg" alt="">
-                <div class="categoria-info">
-                    <h3>Postres</h3>
-                </div>
-            </div>
-            <div class="platillos">
-                <img src="./img/platillos.jpg" alt="">
-                <div class="categoria-info">
-                    <h3>Platillos</h3>
-                </div>
-            </div>
-        </div>
-    </main>
+    <BR></BR>
+    <div th:include="components/mensajes"></div>
+    <div th:include="components/categoría"></div>
+
 
     <section class="section carta-section">
         <div class="carta carta-container">
@@ -98,6 +78,7 @@
             </div>
         </div>
     </section>
+    <div th:include="components/footer"></div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
