--- a/src/main/resources/templates/components/nav_panel.html
+++ b/src/main/resources/templates/components/nav_panel.html
@@ -1,53 +1,65 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Good Day - Nosotros</title>
 
-<!-- 
- Barra de navegación principal del sitio 
- se incluira en varios paginas
--->
-<nav class="menu">
-    <div class="menu-container">
+    <!-- Styles -->
+    <link rel="stylesheet" href="/css/general.css">
+    <link rel="stylesheet" href="/css/mobile.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-        <div class="logo"><img src="./icons/restaurant.png" alt="" class="logo-img"></div>
-        
-        <ul class="nav-links">
-            
-            <li>
-                <a th:classappend="${activePage == 'bienvenido'} ? 'bg_hover color_dark'" th:href="@{/registro_completar}">
-                    <i class="ki-outline ki-book-open"></i> <!-- Icono de carta -->
-                    <span>Inicio</span>
-                </a>
-            </li>
-            <li>
-                <a th:classappend="${activePage == 'carta'} ? 'bg_hover color_dark'" th:href="@{/carta}">
-                    <i class="ki-outline ki-book-open"></i> <!-- Icono de carta -->
-                    <span>Carta</span>
-                </a>
-            </li>
-            <li><a href="">Nosotros</a></li>
-        </ul>
+</head>
+<body>
 
-        
-        <div class="user-actions">
-            <!-- Muestra el nombre del usuario si está logueado, sino muestra texto por defecto -->
-            <span th:text="${session.usuario != null ? session.usuario : (session.cliente != null ? session.cliente.usuario : 'Nombre Usuario')}">Cliente</span>
+    <header id="header">
 
-            <!-- Enlaces a funciones de usuario -->
-            <a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}" title="Carrito">
-                🛒
-            </a>
-            
-            <!-- Mostrar configuración y cerrar sesión solo si hay sesión activa -->
-            <div th:if="${session.usuario != null}">
-                <a th:href="@{/micuenta}" title="Mi Cuenta">Mi Cuenta</a>
-                <a th:href="@{/logout}" title="Cerrar Sesión">Cerrar Sesión</a>
-            </div>
-            
-            <!-- Mostrar iniciar sesión solo si no hay sesión activa -->
-            <div th:unless="${session.usuario != null}">
-                <a href="/login" title="Iniciar Sesión">
+     <!-- Navegation Menu -->
+     <nav class="menu">
+         <div class="logobox">
+             <h1 class="logo"><a href="#">
+                <i class="fas fa-utensils"></i>
+                GOOD DAY
+             </a></h1>
+
+             <span class="btn-menu"><i class="fas fa-bars"></i></span>
+         </div>
+
+         <div class="list-container">
+             <ul class="lists">
+                 <li><a th:classappend="${activePage == 'bienvenido'} ? 'bg_hover color_dark'" th:href="@{/registro_completar}">Inicio</a></li>
+                 <li><a th:classappend="${activePage == 'carta'} ? 'bg_hover color_dark'" th:href="@{/carta}">Carta</a></li>
+                 <li><a th:href="@{/Nosotros}">Nosotros</a>
+                 </li>
+                 <li><a href="#">Contacto</a></li>
+                 <!-- Muestra el nombre del usuario si está logueado, sino muestra texto por defecto -->
+                 <li><a th:text="${session.usuario != null ? session.usuario : (session.cliente != null ? session.cliente.usuario : 'Nombre Usuario')}"></a>Cliente</li>
+                  <!-- Enlaces a funciones de usuario -->
+                 <li><a th:classappend="${activePage == 'carrito'} ? 'bg_hover color_dark'" th:href="@{/carrito_compra}" title="Carrito">
+                    🛒
+                </a></li>
+
+                <!-- Mostrar configuración y cerrar sesión solo si hay sesión activa -->
+                <li th:if="${session.usuario != null}"><a th:href="@{/micuenta}" title="Mi Cuenta">Mi Cuenta</a>
+                    <a th:href="@{/logout}" title="Cerrar Sesión">Cerrar Sesión</a></li>
+
+                <!-- Mostrar iniciar sesión solo si no hay sesión activa -->    
+                <li th:unless="${session.usuario != null}"><a href="/login" title="Iniciar Sesión">
                     Iniciar Sesión
-                </a>
-            </div>
+                </a></li>
+             </ul>
+         </div>
+     </nav>
+     
+    </header>
+<!-- Scripts -->
+<script src="https://kit.fontawesome.com/35db202371.js" crossorigin="anonymous"></script>
+<script src="/js/app.js"></script>
 
-        </div>
-    </div>
-</nav>
+</body>
