--- a/src/main/resources/templates/bienvenido.html
+++ b/src/main/resources/templates/bienvenido.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <header th:include="components/nav_panel"></header>
-
+<br>
+<br>
+<br>
+<center>
     <h1>¡Bienvenido, <span th:text="${cliente.nombre}"></span>!</h1>
     <p>Realiza tus compras de manera responsable</p>
 
-    
+</center>
 
 
     <!-- Modal de registro de dirección -->
