Menu general arreglado

--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -35,7 +35,7 @@ body{
     font-weight: 400;
 }
 .menu .logobox h1 > a > i{color:#A43131; margin-right: 10px;}
-.menu .list-container{margin-right: 30px;}
+.menu .list-container{margin-right: 20px; margin-left: 50px;}
 .menu .list-container .lists{display: flex;}
 .menu .list-container .lists li{list-style: none;}
 .menu .list-container .lists li a{
@@ -48,7 +48,7 @@ body{
     transition: 300ms;
 }
 .menu .list-container .lists li a:hover{color:#A43131;}
-.menu .list-container .lists li a.active{color:#A43131;}
+.menu .list-container .lists li a.active{color:#fa1b1b;}
 
 /** Img header **/
 .img-header{
