--- a/src/main/resources/static/css/general.css
+++ b/src/main/resources/static/css/general.css
@@ -318,6 +318,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 10px 20px; /* Espaciado interno */
+    margin: 10px;
     background-color: #A43131; /* Color de fondo del botón */
     color: white; /* Color del texto */
     border: none; /* Sin borde */
