--- a/src/main/resources/templates/Nosotros.html
+++ b/src/main/resources/templates/Nosotros.html
@@ -6,34 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Good Day - Nosotros</title>
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/mobile.css">
-    <link rel="stylesheet" href="css/responsive.css">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/footer.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
+    <link th:include="components/link"></link>
 </head>
 <body>
 
-    <header id="header">
-
-     <!-- Img Header -->
-     <figure class="img-header">
-         <div class="welcome">
-            
-            <h4>"Por un buen día de sabores sin barreras"</h4>
-            <h2><a href="#">
-                <i class="fas fa-utensils"></i>
-                Good Day
-            </a></h2>
-         </div>
-     </figure>
-
-    </header>
+    <header th:include="components/nav_panel"></header>
+    <header th:include="components/principal"></header>
 
 <main>
     
